clusters/default/overlays/ishtar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ishtar
  namespace: shikanime
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /jackett
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 9117
          - path: /jellyfin
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
          - path: /sonarr
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
          - path: /vaultwarden
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 8080
